@@ -1421,8 +1421,8 @@ public class Plot extends PlotBox implements Cloneable {
         while (dataset >= _points.size()) {
             _points.add(new ArrayList<PlotPoint>());
             _formats.add(new Format());
-            _prevx.add(new Long(0));
-            _prevy.add(new Long(0));
+            _prevx.add(Long.valueOf(0));
+            _prevy.add(Long.valueOf(0));
         }
     }
 
@@ -2065,10 +2065,10 @@ public class Plot extends PlotBox implements Cloneable {
                         barwidth = (line.substring(5)).trim();
                     }
                     try {
-                        Double bwidth = new Double(barwidth);
+                        Double bwidth = Double.valueOf(barwidth);
                         double boffset = _baroffset;
                         if (baroffset != null) {
-                            boffset = (new Double(baroffset)).
+                            boffset = (Double.valueOf(baroffset)).
                                 doubleValue();
                         }
                         setBars(bwidth.doubleValue(), boffset);
@@ -2126,8 +2126,8 @@ public class Plot extends PlotBox implements Cloneable {
                     y = (y.substring(0, fieldsplit2)).trim();
                 }
                 try {
-                    Double xpt = new Double(x);
-                    Double ypt = new Double(y);
+                    Double xpt = Double.valueOf(x);
+                    Double ypt = Double.valueOf(y);
                     if (fieldsplit2 > 0) {
                         // There was one separator after the y value, now
                         // look for another separator.
@@ -2145,8 +2145,8 @@ public class Plot extends PlotBox implements Cloneable {
                             String yl = (line.substring(0,
                                     fieldsplit3)).trim();
                             String yh = (line.substring(fieldsplit3+1)).trim();
-                            Double yLowEB = new Double(yl);
-                            Double yHighEB = new Double(yh);
+                            Double yLowEB = Double.valueOf(yl);
+                            Double yHighEB = Double.valueOf(yh);
                             connected = _addLegendIfNecessary(connected);
                             addPointWithErrorBars(_currentdataset,
                                     xpt.doubleValue(),
@@ -2787,8 +2787,8 @@ public class Plot extends PlotBox implements Cloneable {
         long xpos = _ulx + (long)((pt.x - _xMin) * _xscale);
 
         // Draw the line to the previous point.
-        long prevx = _prevx.get(dataset);
-        long prevy = _prevy.get(dataset);
+        long prevx = _prevx.get(dataset).longValue();
+        long prevy = _prevy.get(dataset).longValue();
         // MIN_VALUE is a flag that there has been no previous x or y.
         if (pt.connected) {
             _drawLine(graphics, dataset, xpos, ypos, prevx, prevy, true);
@@ -2796,8 +2796,8 @@ public class Plot extends PlotBox implements Cloneable {
 
         // Save the current point as the "previous" point for future
         // line drawing.
-        _prevx.set(dataset, xpos);
-        _prevy.set(dataset, ypos);
+        _prevx.set(dataset, Long.valueOf(xpos));
+        _prevy.set(dataset, Long.valueOf(ypos));
 
         // Draw decorations that may be specified on a per-dataset basis
         Format fmt = _formats.get(dataset);
@@ -2846,12 +2846,12 @@ public class Plot extends PlotBox implements Cloneable {
         long ypos = _lry - (long)((pt.y - _yMin) * _yscale);
         ypos = Math.min(Integer.MAX_VALUE, Math.max(Integer.MIN_VALUE, ypos));
         y[index - offset] = (int)ypos;
-        _prevy.set(dataset, ypos);
+        _prevy.set(dataset, Long.valueOf(ypos));
 
         long xpos = _ulx + (long)((pt.x - _xMin) * _xscale);
         xpos = Math.min(Integer.MAX_VALUE, Math.max(Integer.MIN_VALUE, xpos));
         x[index - offset] = (int)xpos;
-        _prevx.set(dataset, xpos);
+        _prevx.set(dataset, Long.valueOf(xpos));
 
         return pt.connected;
     }
