@@ -89,7 +89,7 @@ public class VParamCreateEntry extends JPanel
         ml = new MouseAdapter() {
             public void mouseClicked(MouseEvent evt) {
                 int clicks = evt.getClickCount();
-                int modifier = evt.getModifiers();
+                int modifier = evt.getModifiersEx();
                 if ((modifier & (1 << 4)) != 0) {
                     if (clicks >= 2) {
                         ParamEditUtil.setEditObj((VObjIF) evt.getSource());
@@ -685,7 +685,8 @@ public class VParamCreateEntry extends JPanel
          return tmpLoc;
     }
 
-    public void reshape(int x, int y, int w, int h) {
+    @Override
+    public void setBounds(int x, int y, int w, int h) {
         if (inEditMode) {
            defLoc.x = x;
            defLoc.y = y;
@@ -696,7 +697,7 @@ public class VParamCreateEntry extends JPanel
         curLoc.y = y;
         curDim.width = w;
         curDim.height = h;
-        super.reshape(x, y, w, h);
+        super.setBounds(x, y, w, h);
     }
 
     public Point getLocation() {
@@ -777,18 +778,18 @@ public class VParamCreateEntry extends JPanel
     private final static String[] yes_no = {"yes","no"};
 
     private final static Object[][] attributes = {
-	{new Integer(LABEL), 		"Label of item:"},
-	{new Integer(VARIABLE),		"Vnmr variables:    "},
-	{new Integer(SHOW),			"Show condition:"},
-	{new Integer(CMD),      	"Vnmr command on show:"},
-	{new Integer(CMD2),      	"Vnmr command on hide:"},
-    {new Integer(BGCOLOR),		"Background color:", "color"},
-	{new Integer(BORDER), 		"Border type:", "menu", bdrTypes},
-	{new Integer(SIDE),			"Label position:", "menu", ttlPosn},
-	{new Integer(JUSTIFY), 		"Label justification:", "menu", ttlJust},
-	{new Integer(TAB), 			"Tab to this group:", "radio", yes_no},
-	{new Integer(USEREF), 		"Save as Reference:", "radio", yes_no},
-        {new Integer(VALUE),            "Value:" },
+	{Integer.valueOf(LABEL), 		"Label of item:"},
+	{Integer.valueOf(VARIABLE),		"Vnmr variables:    "},
+	{Integer.valueOf(SHOW),			"Show condition:"},
+	{Integer.valueOf(CMD),      	"Vnmr command on show:"},
+	{Integer.valueOf(CMD2),      	"Vnmr command on hide:"},
+    {Integer.valueOf(BGCOLOR),		"Background color:", "color"},
+	{Integer.valueOf(BORDER), 		"Border type:", "menu", bdrTypes},
+	{Integer.valueOf(SIDE),			"Label position:", "menu", ttlPosn},
+	{Integer.valueOf(JUSTIFY), 		"Label justification:", "menu", ttlJust},
+	{Integer.valueOf(TAB), 			"Tab to this group:", "radio", yes_no},
+	{Integer.valueOf(USEREF), 		"Save as Reference:", "radio", yes_no},
+        {Integer.valueOf(VALUE),            "Value:" },
     };
 
     private void setBorder() {
