@@ -84,7 +84,7 @@ public class VRadio extends JRadioButton implements VObjIF, VObjDef, VEditIF,
     ml = new MouseAdapter() {
        public void mouseClicked(MouseEvent evt) {
         int clicks = evt.getClickCount();
-        int modifier = evt.getModifiers();
+        int modifier = evt.getModifiersEx();
         if ((modifier & (1 << 4)) != 0) {
             if (clicks >= 2) {
             ParamEditUtil.setEditObj((VObjIF) evt.getSource());
@@ -470,7 +470,8 @@ public class VRadio extends JRadioButton implements VObjIF, VObjDef, VEditIF,
         rWidth2 = rWidth;
     }
 
-    public void reshape(int x, int y, int w, int h) {
+    @Override
+    public void setBounds(int x, int y, int w, int h) {
         if (inEditMode) {
            defLoc.x = x;
            defLoc.y = y;
@@ -489,7 +490,7 @@ public class VRadio extends JRadioButton implements VObjIF, VObjDef, VEditIF,
                 adjustFont();
             }
         }
-        super.reshape(x, y, w, h);
+        super.setBounds(x, y, w, h);
     }
 
     public Point getLocation() {
@@ -577,14 +578,14 @@ public class VRadio extends JRadioButton implements VObjIF, VObjDef, VEditIF,
     }
 
     private final static Object[][] attributes = {
-            { new Integer(LABEL), Util.getLabel(LABEL) },
-            { new Integer(VARIABLE), Util.getLabel(VARIABLE) },
-            { new Integer(SETVAL), Util.getLabel(SETVAL) },
-            { new Integer(SHOW), Util.getLabel(SHOW) },
-            { new Integer(CMD), Util.getLabel(CMD) },
-            { new Integer(CMD2), Util.getLabel(CMD2) },
-            { new Integer(STATPAR), Util.getLabel(STATPAR) }, 
-            { new Integer(TOOLTIP), Util.getLabel(TOOLTIP) }
+            { Integer.valueOf(LABEL), Util.getLabel(LABEL) },
+            { Integer.valueOf(VARIABLE), Util.getLabel(VARIABLE) },
+            { Integer.valueOf(SETVAL), Util.getLabel(SETVAL) },
+            { Integer.valueOf(SHOW), Util.getLabel(SHOW) },
+            { Integer.valueOf(CMD), Util.getLabel(CMD) },
+            { Integer.valueOf(CMD2), Util.getLabel(CMD2) },
+            { Integer.valueOf(STATPAR), Util.getLabel(STATPAR) }, 
+            { Integer.valueOf(TOOLTIP), Util.getLabel(TOOLTIP) }
     };
 
 }
