@@ -59,10 +59,10 @@ public class VTrayColor extends JComponent implements VObjIF, VObjDef,
     private Point tmpLoc = new Point(0, 0);
 
     private final static Object[][] m_attributes = {
-        {new Integer(PANEL_NAME), Util.getLabel("Name of item:") },
-        {new Integer(SHOW),     Util.getLabel(SHOW) },
-        {new Integer(SETVAL), Util.getLabel("Color:") },
-        {new Integer(TOOLTIP), Util.getLabel(TOOLTIP) }
+        {Integer.valueOf(PANEL_NAME), Util.getLabel("Name of item:") },
+        {Integer.valueOf(SHOW),     Util.getLabel(SHOW) },
+        {Integer.valueOf(SETVAL), Util.getLabel("Color:") },
+        {Integer.valueOf(TOOLTIP), Util.getLabel(TOOLTIP) }
     };
 
 
@@ -76,7 +76,7 @@ public class VTrayColor extends JComponent implements VObjIF, VObjDef,
 	ml = new MouseAdapter() {
               public void mouseClicked(MouseEvent evt) {
                 int clicks = evt.getClickCount();
-                int modifier = evt.getModifiers();
+                int modifier = evt.getModifiersEx();
                 if ((modifier & (1 << 4)) != 0) {
                     if (clicks >= 2) {
                         ParamEditUtil.setEditObj((VObjIF) evt.getSource());
@@ -348,7 +348,8 @@ public class VTrayColor extends JComponent implements VObjIF, VObjDef,
          return tmpLoc;
     }
 
-    public void reshape(int x, int y, int w, int h) {
+    @Override
+    public void setBounds(int x, int y, int w, int h) {
         if (inEditMode) {
            defLoc.x = x;
            defLoc.y = y;
@@ -359,7 +360,7 @@ public class VTrayColor extends JComponent implements VObjIF, VObjDef,
         curLoc.y = y;
         curDim.width = w;
         curDim.height = h;
-        super.reshape(x, y, w, h);
+        super.setBounds(x, y, w, h);
     }
 
     public Point getLocation() {
