@@ -192,13 +192,13 @@ public class Util implements VnmrKey {
         String label = null;
         try {
             label = labels.getString(symbol);
-            return true;
+            return Boolean.TRUE;
         } catch(MissingResourceException e) {
             try {
                 label = admlabels.getString(symbol);
-                return true;
+                return Boolean.TRUE;
             } catch(MissingResourceException e2) {
-                return false;
+                return Boolean.FALSE;
             }
         }
     }
@@ -403,7 +403,7 @@ public class Util implements VnmrKey {
     public static String getLabel(int a){
         if(elabels==null)
             setAttributeLabels();
-        Integer key=new Integer(a);
+        Integer key= Integer.valueOf(a);
         String sym=elabels.get(key);
         if(sym==null){
             if(DebugOutput.isSetFor("labels"))
@@ -561,7 +561,7 @@ public class Util implements VnmrKey {
                 if (img.getWidth() < 100 && img.getHeight() < 100) {
                    fileNameCache.put(f, fpath);
                    fileIconCache.put(f, imageIcon);
-                   fileDateCache.put(f, new Long(fd.lastModified()));
+                   fileDateCache.put(f, Long.valueOf(fd.lastModified()));
                 }
                 else {
                    fileIconCache.remove(f);
@@ -2103,7 +2103,7 @@ public class Util implements VnmrKey {
         String[] defaultDays;
         String[] Days;
 
-        symbols = new DateFormatSymbols(new Locale("en","US")); // for default locale
+        symbols = new DateFormatSymbols(Locale.US); // for default locale
         defaultDays = symbols.getShortWeekdays();
         symbols=new DateFormatSymbols(); // for current locale
         Days=symbols.getShortWeekdays();
@@ -2123,7 +2123,7 @@ public class Util implements VnmrKey {
         DateFormatSymbols symbols;
         String[] defaultDays;
         String[] Days;
-        symbols = new DateFormatSymbols(new Locale("en","US")); // for default locale
+        symbols = new DateFormatSymbols(Locale.US); // for default locale
         defaultDays = symbols.getShortWeekdays();
         symbols=new DateFormatSymbols(); // for current locale
         Days=symbols.getShortWeekdays();
